--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- end meta -->
 
   <!-- links -->
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="src/assets/W-icon.svg" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- end links -->
 
-  <title>Vite + React</title>
+  <title>Wesley Alves</title>
 </head>
 
 <body>
